apps/base/logging-loki/deploy/loki/patches/loki-canary-daemonSet.yaml
# Source: loki/templates/loki-canary/daemonset.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: loki-canary
  namespace: logging-loki
spec:
  template:
    spec:
      containers:
        - name: loki-canary
          image: registry.lan/grafana/loki-canary:3.0.0
          imagePullPolicy: IfNotPresent
