apps/base/logging-loki/deploy/loki/patches/loki-results-cache-statefulSet-securityContext.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: loki-results-cache
  namespace: logging-loki
spec:
  template:
    spec:
      containers:
        - name: memcached
          securityContext:
            runAsUser: 11211 # memcache
        - name: exporter
          securityContext:
            runAsUser: 65534 # nobody
