apps/base/logging-loki/deploy/loki/patches/ingress-gateway-annotations.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: loki-gateway
  namespace: logging-loki
  annotations:
    # Fix missing pod-selector annotation in the helm chart
    gethomepage.dev/pod-selector: ""
